--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-http-proxy": "^1.6.3",
     "mysql2": "^2.3.3"
   }
 }
