--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-http-proxy": "^1.6.3",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mysql2": "^2.3.3"
   }
 }
