--- a/back/package.json
+++ b/back/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-http-proxy": "^1.6.3",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "path": "^0.12.7"
   }
 }
