--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://maxwoollons.github.io/repairorganiser/",
+  "homepage": "/",
   "name": "repairorganiser",
   "private": true,
   "version": "0.0.0",
